Fix contrast failure for errors

--- a/assets/css/base/_variables.scss
+++ b/assets/css/base/_variables.scss
@@ -15,7 +15,7 @@ $color-primary-light: #9B74E8;
 $color-primary-tint: lighten(#9B74E8, 25%);
 $color-action: #F7A006;
 $color-success: #8AD3E3;
-$color-error: #F90B66;
+$color-error: #e20257;
 
 $white: #FFFFFF;
 $gray-lightest: #f9f7fa;
